# lr-tutor

./: .env.example  .gitignore  README.md  dev-log.md  pyproject.toml
data/: corpus.jsonl
eval/: gated_batch.jsonl  generated_samples.jsonl  human_scores.jsonl  naive_batch.jsonl  naive_scores.jsonl  retrieval_cases.json
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: AnswerSelector.tsx  HintPanel.tsx  HumanEvalPanel.tsx  Markdown.tsx  Question.tsx  WeaknessHeatmap.tsx
prompts/: agent_system_prompt.txt
scripts/: compare_baselines.py  compute_novelty.py  extract_from_html.py  extract_from_scan.py  generate_fillin.py  generate_gated_batch.py  generate_naive_batch.py  label_question_types.py  load_vectors.py  pdf_to_images.py  run_eval.py  scrape_lawhub.py
src/: agent.py  api.py  db.py  generator.py  generator_gated.py  models.py  question_cache.py  retriever.py  scorer.py  tools.py  weakness.py
tests/: test_agent.py  test_generator_gated.py  test_models.py  test_retriever.py
tests/fixtures/: mini_corpus.jsonl
