[project]
name = "lsat-tutor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.1.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "playwright>=1.44.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
# onnxruntime 1.21+ dropped macOS x86_64 (Intel Mac) support.
# Pin to <=1.20.1 which has macosx_13_0_x86_64 wheels compatible with macOS 14.
override-dependencies = ["onnxruntime<=1.20.1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
